fix bug: when not found wordladder

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -31,7 +31,7 @@
         var username = $("#username").val();
         var password = $("#password").val();
 
-        alert(username + " " + password);
+        // alert(username + " " + password);
 
         $.ajax({
             url: "/oauth/token",                          //ajax请求的url
