--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -8,17 +8,15 @@
 </head>
 <body>
 
-<!--<form class="form-signin" action="" method="post">-->
-    <h2>请先登录</h2>
-    <label>username</label>
-    <input type="text" name="username" id="username">
-    <br/>
-    <label>password</label>
-    <input type="password" name="password" id="password">
-    <br/>
-    <!--<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>-->
-    <button id="submit">登录</button>
-<!--</form>-->
+<h2>请先登录</h2>
+<label>username</label>
+<input type="text" name="username" id="username">
+<br/>
+<label>password</label>
+<input type="password" name="password" id="password">
+<br/>
+<!--<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>-->
+<button id="submit">登录</button>
 
 <script>
 
@@ -36,12 +34,10 @@
         $.ajax({
             url: "/oauth/token",                          //ajax请求的url
             data: {
-                "username": username,
-                "password": password,
-                "grant_type": "password",
+                "grant_type": "client_credentials",
                 "scope": "select",
-                "client_id": "client_2",
-                "client_secret": "123456"
+                "client_id": username,
+                "client_secret": password
             }, //传入后台的数据，key-value形式，其实是json串
             type: 'post',                            //请求类型，有post和get
             dataType: 'json',
@@ -49,15 +45,15 @@
             success: function (result) {              //如果处理成功，返回值会出现在result里，其是个json对象
                 console.log(result);
                 // alert(result.access_token);
-                if (result.status === 400) {
+                if (!result.access_token) {
                     alert("用户名或密码错误！");
                     return;
                 }
-                my_token = result.access_token;
+                var my_token = result.access_token;
                 window.location.href = "/home?access_token=" + my_token;
             },
             error: function (msg) {                   //处理失败，打印错误信息
-                alert("出现未知错误！");
+                alert("用户名或密码错误！");
                 console.log(msg);
             }
         })
