修改部分样式问题

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -20,10 +20,10 @@
 
 <script>
 
-    $(function () {
-        $("#username").val("user_1");
-        $("#password").val("123456");
-    });
+    // $(function () {
+    //     $("#username").val("user_1");
+    //     $("#password").val("123456");
+    // });
 
     $("#submit").click(function () {
         var username = $("#username").val();
